fix: apply 'break-words' to wrap too long url reference to fix entire layout

--- a/next/components/markdown-styles.module.css
+++ b/next/components/markdown-styles.module.css
@@ -1,5 +1,5 @@
 .markdown {
-  @apply text-lg leading-relaxed;
+  @apply text-lg leading-relaxed break-words;
 }
 
 .markdown p,
